--- a/Dtp/res/layout/activity_main.xml
+++ b/Dtp/res/layout/activity_main.xml
@@ -2,48 +2,59 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:baselineAligned="true"
+    android:gravity="center"
+    android:orientation="horizontal"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.vinci.dtp.MainActivity" 
-    android:orientation="vertical">
-
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="@string/hello_world"
-        android:textSize="25sp" />
+    tools:context="com.vinci.dtp.MainActivity" >
 
     <ImageView
         android:id="@+id/image"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:src="@drawable/logo_in_clutter"
-        android:contentDescription="@string/image" />
-    
-     <ImageView
-        android:id="@+id/drawing"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:src="@drawable/logo" 
-        android:contentDescription="@string/drawing"/>
+        android:layout_width="500dp"
+        android:layout_height="500dp"
+        android:layout_gravity="top"
+        android:layout_marginTop="80dp"
+        android:contentDescription="@string/image"
+        android:src="@drawable/logo_in_clutter" />
 
-     <Button
-         android:id="@+id/computeBtn"
-         android:layout_width="fill_parent"
-         android:layout_height="wrap_content"
-         android:gravity="center"
-         android:text="@string/compute" 
-         android:textSize="25sp"/>
+    <com.android.graphics.CanvasView
+        android:id="@+id/canvasView"
+        android:layout_width="500dp"
+        android:layout_height="500dp"
+        android:layout_gravity="top"
+        android:layout_marginTop="80dp" />
 
-     <TextView
-         android:id="@+id/score"
-         android:layout_width="fill_parent"
-         android:layout_height="fill_parent" 
-         android:gravity="center"
-         android:textSize="25sp"/>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="top"
+        android:layout_marginTop="80dp"
+        android:orientation="vertical" >
+
+        <Button
+            android:id="@+id/clearbtn"
+            android:layout_width="139dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top"
+            android:text="clear" />
+
+        <Button
+            android:id="@+id/submitbtn"
+            android:layout_width="139dp"
+            android:layout_height="wrap_content"
+            android:text="submit" />
+
+        <TextView
+            android:id="@+id/output"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="20dp"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
+
+    </LinearLayout>
 
 </LinearLayout>
